--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,6 +33,6 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      # run: ctest -C ${{env.BUILD_TYPE}}
-      run: ls && chmod +x test.sh && ./test.sh
+      run: ctest -C ${{env.BUILD_TYPE}}
+      # run: ls && chmod +x test.sh && ./test.sh
       
